--- a/app/src/main/res/layout/activity_settings_activity.xml
+++ b/app/src/main/res/layout/activity_settings_activity.xml
@@ -248,20 +248,24 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
+                        android:paddingLeft="15dp"
+                        android:paddingBottom="5dp"
                         android:text="https://boomagain.com/70s-trivia/"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:layout_marginTop="10dp"
+                        android:paddingLeft="15dp"
+                        android:paddingBottom="5dp"
                         android:text="https://groupgames101.com/90s-trivia-questions/"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
                         android:textColor="@color/black"
+                        android:paddingLeft="15dp"
+                        android:paddingBottom="5dp"
                         android:text="https://groupgames101.com/80s-trivia-questions-and-answers/"/>
 
                 </LinearLayout>
